--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,67 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.6'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
+    id 'org.springframework.boot' version '2.6.6'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
 }
+
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'jacoco'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 
-jar {
-	enabled = false
+    compile.exclude module: 'spring-boot-starter-tomcat'
+    compile.exclude group: 'org.apache.tomcat'
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
+    maven { url "https://plugins.gradle.org/m2/" }
+}
+
+jar {
+    enabled = false
+}
+
+test {
+    useJUnitPlatform()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation('org.springframework.boot:spring-boot-starter-web') {
-		exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
-		exclude group: "commons-logging", module: "commons-logging"
-		exclude group: "spring-boot-starter-logging", module: "spring-boot-starter-logging"
-	}
-	implementation 'org.springframework.boot:spring-boot-starter-undertow'
-	implementation 'org.slf4j:jcl-over-slf4j'
-	implementation 'ch.qos.logback:logback-classic'
-	implementation 'com.google.cloud:google-cloud-logging-logback:0.121.3-alpha'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.6.6'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+        exclude group: "commons-logging", module: "commons-logging"
+        exclude group: "spring-boot-starter-logging", module: "spring-boot-starter-logging"
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-undertow'
+    implementation 'org.slf4j:jcl-over-slf4j'
+    implementation 'ch.qos.logback:logback-classic'
+    implementation 'com.google.cloud:google-cloud-logging-logback:0.121.3-alpha'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.2'
 
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'net.logstash.logback:logstash-logback-encoder:6.4'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'net.logstash.logback:logstash-logback-encoder:6.4'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.projectlombok:lombok'
-	testAnnotationProcessor 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
